--- a/index.html
+++ b/index.html
@@ -11,18 +11,29 @@
       type="text/css"
     />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      document
+        .getElementById("blog-btn")
+        .addEventListener("click", function () {
+          window.location.href = "blog.html";
+        });
+    </script>
   </head>
   <body>
     <header>
-      <nav class="flex justify-between items-center bg-yellow-50 px-8 py-2">
+      <nav
+        class="flex justify-between items-center bg-yellow-100/20 px-8 py-2 sticky top-0 left-0 w-full z-50 backdrop-blur-md shadow-md bg"
+      >
         <div>
+          <!-- desktop blog btn -->
           <button
+            id="blog-btn"
             class="btn bg-[#B4F461] text-gray-900 font-semibold normal-case"
           >
             Blog
           </button>
         </div>
-        <div class="flex flex-col items-center">
+        <div class="flex flex-row items-center">
           <img src="assets/logo.png" alt="Logo" class="h-8 mb-1" />
           <h1 class="text-gray-900 font-semibold text-lg">Donate Bangladesh</h1>
         </div>
@@ -32,13 +43,18 @@
           <p>BDT</p>
         </div>
       </nav>
-      <div class="flex justify-center items-center gap-6 py-4">
+      <!-- banner -->
+      <div
+        class="flex justify-center items-center gap-6 py-4 sticky top-20 left-0 w-full bg-gray-100/50 bg-100/50 backdrop-blur-full shadow-md"
+      >
         <button
+          id="donation-btn"
           class="btn btn-lg bg-[#B4F461] text-gray-900 font-semibold normal-case"
         >
           Donation
         </button>
         <button
+          id="history-btn"
           class="btn btn-lg bg-[#B4F461] text-gray-900 font-semibold normal-case"
         >
           History
@@ -46,7 +62,7 @@
       </div>
     </header>
     <!-- Main content here -->
-    <main class="container mx-auto">
+    <main class="container mx-auto pt-10 top-32 left-0 w-full px-6 py-8">
       <div>
         <!-- card 1 -->
         <div
@@ -166,5 +182,8 @@
         </div>
       </div>
     </main>
+    <script src="js/utilities.js"></script>
+    <script src="js/button.js"></script>
+    <script src="js/change.js"></script>
   </body>
 </html>
